--- a/part3/backend/package.json
+++ b/part3/backend/package.json
@@ -9,5 +9,8 @@
   },
   "keywords": [],
   "author": "Josh Javier",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
