--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Josh Javier",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
