--- a/part3/backend/package.json
+++ b/part3/backend/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "build:ui": "rm -rf dist && cd ../../part2/notes && npm run build && cp -r dist ../../part3/backend",
+    "deploy:full": "npm run build:ui && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
