--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^8.1.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
