Connect the backend to the MongoDB database

--- a/part3/notes-backend/package.json
+++ b/part3/notes-backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node --env-file=.env.local index.js",
+    "dev": "nodemon --env-file=.env.local index.js",
     "build:ui": "rm -rf dist && cd ../../part2/notes && npm install && npm run build && cp -r dist ../../part3/backend",
     "deploy:full": "npm run build:ui && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
