--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev": "nodemon --env-file=.env.local index.js",
     "build:ui": "rm -rf dist && cd ../../part2/phonebook && npm install && npm run build && cp -r dist ../../part3/phonebook-backend",
     "deploy:full": "npm run build:ui && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
