--- a/part3/notes-backend/package.json
+++ b/part3/notes-backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon --env-file=.env.local index.js",
-    "build:ui": "rm -rf dist && cd ../../part2/notes && npm install && npm run build && cp -r dist ../../part3/backend",
+    "build:ui": "rm -rf dist && cd ../../part2/notes && npm install && npm run build && cp -r dist ../../part3/notes-backend",
     "deploy:full": "npm run build:ui && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
