--- a/part3/notes-backend/package.json
+++ b/part3/notes-backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon --env-file=.env.local index.js",
+    "lint": "eslint .",
     "build:ui": "rm -rf dist && cd ../../part2/notes && npm install && npm run build && cp -r dist ../../part3/notes-backend",
     "deploy:full": "npm run build:ui && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +20,8 @@
     "mongoose": "^8.1.3"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^1.6.2",
+    "eslint": "^8.56.0",
     "nodemon": "^3.0.3"
   }
 }
