--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon --env-file=.env.local index.js",
     "build:ui": "rm -rf dist && cd ../../part2/phonebook && npm install && npm run build && cp -r dist ../../part3/phonebook-backend",
     "deploy:full": "npm run build:ui && npm install",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,6 +20,8 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^1.6.2",
+    "eslint": "^8.56.0",
     "nodemon": "^3.0.3"
   }
 }
