--- a/part4/notes-backend/package.json
+++ b/part4/notes-backend/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "build:ui": "rm -rf dist && cd ../../part2/notes && npm install && npm run build && cp -r dist ../../part3/notes-backend",
     "deploy:full": "npm run build:ui && npm install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test"
   },
   "keywords": [],
   "author": "Josh Javier",
