--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon --env-file=.env.local index.js",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test"
   },
   "keywords": [],
   "author": "Josh Javier",
