--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon --env-file=.env.local index.js",
-    "lint": "eslint .",
-    "test": "node --test"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon --env-file=.env.local index.js",
+    "test": "NODE_ENV=test node --env-file=.env.local --test",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "Josh Javier",
