--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@stylistic/eslint-plugin": "^1.6.2",
     "eslint": "^8.56.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "supertest": "^6.3.4"
   }
 }
