--- a/part4/notes-backend/package.json
+++ b/part4/notes-backend/package.json
@@ -15,6 +15,7 @@
   "author": "Josh Javier",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.3"
