--- a/part6/redux-notes/package.json
+++ b/part6/redux-notes/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
+    "deep-freeze": "^0.0.1",
     "eslint": "^8.56.0",
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-react": "^7.33.2",
