--- a/part6/unicafe-redux/package.json
+++ b/part6/unicafe-redux/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
+    "@stylistic/eslint-plugin": "^1.6.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
