--- a/part5/notes/package.json
+++ b/part5/notes/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^1.6.3",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
@@ -25,7 +27,9 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^24.0.0",
     "json-server": "^1.0.0-alpha.23",
-    "vite": "^5.1.0"
+    "vite": "^5.1.0",
+    "vitest": "^1.3.1"
   }
 }
