--- a/part5/notes/package.json
+++ b/part5/notes/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server db.json"
+    "server": "json-server db.json",
+    "test": "vitest"
   },
   "dependencies": {
     "axios": "^1.6.7",
