--- a/part5/notes/package.json
+++ b/part5/notes/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "jsdom": "^24.0.0",
     "json-server": "^1.0.0-alpha.23",
+    "unplugin-auto-import": "^0.17.5",
     "vite": "^5.1.0",
     "vitest": "^1.3.1"
   }
