Add script to run the backend for Cypress tests

--- a/part4/notes-backend/package.json
+++ b/part4/notes-backend/package.json
@@ -7,6 +7,7 @@
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development nodemon --env-file=.env.local index.js",
     "test": "NODE_ENV=test node --env-file=.env.local --test",
+    "start:test": "NODE_ENV=test node --env-file=.env.local index.js",
     "lint": "eslint .",
     "build:ui": "rm -rf dist && cd ../../part2/notes && npm install && npm run build && cp -r dist ../../part3/notes-backend",
     "deploy:full": "npm run build:ui && npm install"
