--- a/part8/apollo-server-study/package.json
+++ b/part8/apollo-server-study/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node --env-file=.env index.js",
+    "dev": "npx nodemon --env-file=.env.local index.js"
   },
   "author": "Josh Javier",
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "^4.10.4",
-    "graphql": "^16.9.0"
+    "graphql": "^16.9.0",
+    "mongoose": "^8.5.1"
   }
 }
