--- a/part8/apollo-server-study/package.json
+++ b/part8/apollo-server-study/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "graphql": "^16.9.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1"
   }
 }
