--- a/part9/9a-exercises/package.json
+++ b/part9/9a-exercises/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "ts-node index.ts",
     "dev": "ts-node-dev index.ts",
+    "lint": "eslint .",
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts"
   },
@@ -13,10 +14,15 @@
   "license": "MIT",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "@stylistic/eslint-plugin": "^2.6.2",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
+    "eslint": "^9.9.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.1"
   },
   "dependencies": {
     "express": "^4.19.2"
