--- a/part9/flights/package.json
+++ b/part9/flights/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "tsc": "tsc",
     "start": "node build/index.js",
-    "dev": "ts-node-dev index.ts",
+    "dev": "ts-node-dev src/index.ts",
     "lint": "eslint ."
   },
   "keywords": [],
