--- a/part9/patientor-backend/package.json
+++ b/part9/patientor-backend/package.json
@@ -17,12 +17,14 @@
     "@stylistic/eslint-plugin": "^2.6.2",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.9.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.1"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "uuid": "^10.0.0"
   }
 }
